# automation-playground

./: pyproject.toml
py-httpx/: pyproject.toml
py-httpx/tests/: test_full_flow.py
py-locust/: README.md  locustfile.py  pyproject.toml
py-pw/: .gitignore  pyproject.toml
py-pw/src/pages/: cart.py  checkout.py  details.py  header.py  home.py  login.py
py-pw/test/: test_full_flow.py
py-robot/: .gitignore  pyproject.toml
py-robot/resources/: cart.resource  header_component.resource  home.resource  item_detail.resource  login.resource  overview.resource
py-robot/tests/: full_flow.robot
