[project]
name = "py-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "robotframework (>=7.2.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.7.0,<7.0.0)",
    "robotframework-faker (>=5.0.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]